force-app/main/default/objects/ARF_Credit_Application__c/ARF_Credit_Application__c.object-meta.xml
<CustomObject>
    <label>Credit Application</label>
    <pluralLabel>Credit Applications</pluralLabel>
    <nameField>
        <label>Application Number</label>
        <displayFormat>CA-{000000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>