force-app/main/default/objects/ARF_Credit_Application__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <type>Text</type>
    <length>64</length>
</CustomField>