force-app/main/default/objects/ARF_Credit_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Credit_Applications</relationshipName>
    <relationshipLabel>Credit Applications</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>