force-app/main/default/objects/ARF_Credit_Application__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>