force-app/main/default/objects/ARF_Credit_Application__c/fields/AP_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact_Email__c</fullName>
    <label>AP Contact Email</label>
    <type>Email</type>
</CustomField>