force-app/main/default/objects/ARF_Credit_Application__c/fields/AP_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact_Name__c</fullName>
    <label>AP Contact Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>