force-app/main/default/objects/ARF_Credit_Application__c/fields/AP_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact_Phone__c</fullName>
    <label>AP Contact Phone</label>
    <type>Phone</type>
</CustomField>