force-app/main/default/objects/ARF_Credit_Application__c/fields/Approved_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Credit_Limit__c</fullName>
    <label>Approved Credit Limit</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>