force-app/main/default/objects/ARF_Credit_Application__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <label>Billing Street</label>
    <type>Text</type>
    <length>255</length>
</CustomField>