force-app/main/default/objects/ARF_Credit_Application__c/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <label>Billing Zip</label>
    <type>Text</type>
    <length>20</length>
</CustomField>