force-app/main/default/objects/ARF_Credit_Application__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Corporation</fullName><default>false</default></value>
            <value><fullName>LLC</fullName><default>false</default></value>
            <value><fullName>Partnership</fullName><default>false</default></value>
            <value><fullName>Sole_Proprietorship</fullName><default>false</default></value>
            <value><fullName>Non-Profit</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>