force-app/main/default/objects/ARF_Credit_Application__c/fields/Credit_Auth_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Credit_Auth_Accepted__c</fullName>
    <label>Credit Authorization Accepted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>