force-app/main/default/objects/ARF_Credit_Application__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <label>Credit Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>