force-app/main/default/objects/ARF_Credit_Application__c/fields/Decision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Decision_Notes__c</fullName>
    <label>Decision Notes</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>