force-app/main/default/objects/ARF_Credit_Application__c/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <label>DUNS Number</label>
    <type>Text</type>
    <length>20</length>
</CustomField>