force-app/main/default/objects/ARF_Credit_Application__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <type>Text</type>
    <length>20</length>
</CustomField>