force-app/main/default/objects/ARF_Credit_Application__c/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <label>Federal Tax ID</label>
    <type>Text</type>
    <length>20</length>
</CustomField>