force-app/main/default/objects/ARF_Credit_Application__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <label>Legal Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>