force-app/main/default/objects/ARF_Credit_Application__c/fields/Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Employees__c</fullName>
    <label>Number Of Employees</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>