force-app/main/default/objects/ARF_Credit_Application__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <label>Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default></value>
            <value><fullName>Medium</fullName><default>false</default></value>
            <value><fullName>High</fullName><default>false</default></value>
            <value><fullName>Very_High</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>