force-app/main/default/objects/ARF_Credit_Application__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <type>Text</type>
    <length>50</length>
</CustomField>