force-app/main/default/objects/ARF_Credit_Application__c/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <label>Shipping Zip</label>
    <type>Text</type>
    <length>20</length>
</CustomField>