force-app/main/default/objects/ARF_Credit_Application__c/fields/Signature_Data__c.field-meta.xml
<CustomField>
    <fullName>Signature_Data__c</fullName>
    <label>Signature Data</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>