force-app/main/default/objects/ARF_Credit_Application__c/fields/Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Name__c</fullName>
    <label>Signature Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>