force-app/main/default/objects/ARF_Credit_Application__c/fields/Signature_Title__c.field-meta.xml
<CustomField>
    <fullName>Signature_Title__c</fullName>
    <label>Signature Title</label>
    <type>Text</type>
    <length>255</length>
</CustomField>