force-app/main/default/objects/ARF_Credit_Application__c/fields/State_Of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_Of_Incorporation__c</fullName>
    <label>State Of Incorporation</label>
    <type>Text</type>
    <length>50</length>
</CustomField>