force-app/main/default/objects/ARF_Credit_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default></value>
            <value><fullName>Submitted</fullName><default>false</default></value>
            <value><fullName>Under_Review</fullName><default>false</default></value>
            <value><fullName>Approved</fullName><default>false</default></value>
            <value><fullName>Declined</fullName><default>false</default></value>
            <value><fullName>Expired</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>