force-app/main/default/objects/ARF_Credit_Application__c/fields/Years_In_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_In_Business__c</fullName>
    <label>Years In Business</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>